--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .resume-aside {
-	background-color: #E68F90
+	background-color: #DDDA4D;
 }
 
 /* Styles for lists in the document */
@@ -57,11 +57,27 @@ body {
 	background-color: #f8f8fc;
 }
 
-.coco {font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.coco {
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #DDDA4D;
 	background-color: #9A4444;
+	font-weight: bolder;
+	font-variant: small-caps;
+	font-size: 50px;
 }
 
+.coci {
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #DDDA4D;
+	background-color: #9A4444;
+	font-weight: normal;
+	font-style: italic;
+	font-variant: small-caps;
+	font-size: large;
+}
 
+.white {
+	color: #9A4444;	
+}
 
 
